tests/macros/plugin/transform.stderr
error: option `transform` does not exist for kind `plugin`
 --> $DIR/transform.rs:2:46
  |
2 |     let q = inquisition::questions![Plugin { transform: todo!() }];
  |                                              ^^^^^^^^^
