tests/macros/plugin/transform.rs
fn main() {
    let q = inquisition::questions![Plugin { transform: todo!() }];
}
